Add legal notice and terms of use to aviso-legal.html
Added legal notice section with terms of use and conditions.

--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -3,7 +3,64 @@
 <title>Aviso Legal | CholoRent S.L</title><link rel='stylesheet' href='css/styles.css'><link rel="icon" type="image/png" href="images/favicon.png">
 </head><body>
 <script src="js/navbar.js"></script>
-<section class='section'><h2>Aviso Legal</h2><p>Este aviso describe las condiciones de uso y la propiedad de este sitio web.</p><p><a href='index.html'>← Volver al inicio</a></p></section>
+<section class='section'><h2>Aviso Legal</h2><p>
+<strong>1. LEY DE SERVICIOS DE LA SOCIEDAD DE LA INFORMACIÓN Y COMERCIO ELECTRÓNICO</strong><br><br>
+
+En cumplimiento de lo dispuesto en el art. 10 de la Ley 34/2002 de 11 de julio de Servicios de la Sociedad de la Información (L.S.S.I.), se da a conocer la siguiente Información General:<br><br>
+
+Que el dominio <strong>www.cholorent.com</strong>, a partir de ahora Sitio Web, está registrado a nombre de <strong>CHOLORENT, S.L. CIF B70557236 </strong>, con domicilio social en Parque Empresarial A Sionlla - Rúa Comunidade Valenciana Nº 4, 15707 - Santiago de Compostela (A Coruña), a partir de ahora <strong>EL TITULAR</strong>.<br><br>
+
+<strong>2. CONDICIONES DE USO</strong><br><br>
+
+<strong>I.- USUARIOS/AS</strong><br>
+El acceso y/o uso del Sitio Web <strong>www.cholorent.com</strong> atribuye a quien lo realiza la condición de usuario/a, aceptando, desde ese mismo momento, plenamente y sin reserva alguna, las presentes condiciones generales, así como las condiciones particulares que, en su caso, complementen, modifiquen o sustituyan las condiciones generales en relación con determinados servicios y contenidos del Sitio Web.<br><br>
+
+<strong>II.- USO DEL SITIO WEB, SUS SERVICIOS Y CONTENIDOS</strong><br>
+El/la usuario/a se compromete a utilizar el Sitio Web y sus servicios y contenidos sin contravenir la legislación vigente, la buena fe, los usos generalmente aceptados y el orden público.<br><br>
+
+Asimismo, queda prohibido el uso de la Web con fines ilícitos o lesivos contra EL TITULAR o cualquier/a tercero/a, o que, de cualquier forma, puedan causar perjuicio o impedir el normal funcionamiento del Sitio Web.<br><br>
+
+Respecto de los contenidos (informaciones, textos, gráficos, archivos de sonido y/o imagen, fotografías, diseños, etc.), se prohíbe:<br>
+- Su reproducción, distribución o modificación, a menos que se cuente con la autorización de sus legítimos/as titulares o resulte legalmente permitido.<br>
+- Cualquier vulneración de los derechos de EL TITULAR o de sus legítimos/as titulares sobre los mismos.<br>
+- Su utilización para todo tipo de fines comerciales o publicitarios, distintos de los estrictamente permitidos.<br>
+- Cualquier intento de obtener los contenidos del Sitio Web por cualquier medio distinto de los que se pongan a disposición de los/las usuarios/as así como de los que habitualmente se empleen en la red, siempre que no causen perjuicio alguno a la web.<br><br>
+
+<strong>III.- MODIFICACIÓN UNILATERAL</strong><br>
+EL TITULAR podrá modificar unilateralmente y sin previo aviso, siempre que lo considere oportuno, la estructura y diseño del Sitio Web, así como modificar o eliminar los servicios, los contenidos y las condiciones de acceso y/o uso del mismo.<br><br>
+
+<strong>IV.- HIPERENLACES</strong><br>
+El establecimiento de cualquier "hiperenlace" entre una página web y el Sitio Web estará sometido a las siguientes condiciones:<br>
+- No se permite la reproducción, ni total ni parcial, de ninguno de los servicios ni contenidos del Sitio Web.<br>
+- Salvo consentimiento previo y expreso, la página web en la que se establezca el hiperenlace no contendrá ninguna marca, nombre comercial, rótulo de establecimiento, denominación, logotipo, eslogan u otros signos distintivos pertenecientes al TITULAR.<br>
+- Bajo ninguna circunstancia, EL TITULAR será responsable de los contenidos o servicios puestos a disposición del público en la página web desde la que se realice el "hiperenlace" ni de las informaciones y manifestaciones incluidas en las mismas.<br><br>
+
+<strong>V.- EXCLUSIÓN DE GARANTÍAS Y RESPONSABILIDAD</strong><br>
+EL TITULAR no otorga ninguna garantía ni se hace responsable, en ningún caso, de los daños y perjuicios de cualquier naturaleza que pudieran traer causa de:<br>
+- La falta de disponibilidad, mantenimiento y efectivo funcionamiento de la Web y/o de sus servicios o contenidos.<br>
+- La falta de utilidad, adecuación o validez de la Web y/o de sus servicios o contenidos para satisfacer necesidades, actividades o resultados concretos o expectativas de los usuarios.<br>
+- La existencia de virus, programas maliciosos o lesivos en los contenidos.<br>
+- La recepción, obtención, almacenamiento, difusión o transmisión, por parte de los/las usuarios/as, de los contenidos.<br>
+- El uso ilícito, negligente, fraudulento, contrario a las presentes Condiciones Generales, a la buena fe, a los usos generalmente aceptados o al orden público, del Sitio Web, sus servicios o contenidos, por parte de los usuarios.<br>
+- La falta de licitud, calidad, fiabilidad, utilidad y disponibilidad de los servicios prestados por terceros/as y puestos a disposición de los/las usuarios/as en el Sitio Web.<br>
+- El incumplimiento por parte de terceros de sus obligaciones o compromisos en relación con los servicios prestados a los usuarios/as a través del Sitio Web.<br><br>
+
+<strong>VI.- DURACIÓN</strong><br>
+La duración de la prestación del servicio del Sitio Web y de los servicios es de carácter indefinido.<br><br>
+
+Sin perjuicio de lo anterior, EL TITULAR se reserva el derecho para interrumpir, suspender o terminar la prestación del servicio de la Web o de cualquiera de los servicios que lo integran, en los mismos términos que se recogen en la condición tercera.<br><br>
+
+<strong>VII.- LEGISLACIÓN APLICABLE Y JURISDICCIÓN</strong><br>
+Las presentes Condiciones Generales se regirán por la legislación española.<br><br>
+
+CHOLORENT, S.L. y el usuario/a, con renuncia expresa a cualquier otro fuero que pudiera corresponderles, se someten a la Jurisdicción de los Juzgados y Tribunales del domicilio del usuario para cuantas cuestiones pudieran suscitarse o acciones ejercitarse derivadas de la prestación del servicio de la Web y de sus servicios y contenidos y sobre la interpretación, aplicación, cumplimiento o incumplimiento de lo aquí establecido.<br><br>
+
+En el supuesto de que el Usuario/a tenga su domicilio fuera de España, CHOLORENT, S.L. y el Usuario/a, con renuncia expresa a cualquier otro fuero que pudiera corresponderles, se someten a la Jurisdicción de los Juzgados y Tribunales de Santiago de Compostela.<br><br>
+
+<strong>3. BAJA DE COMUNICACIONES COMERCIALES</strong><br><br>
+De conformidad con la Ley de Servicios de la Sociedad de la Información 34/2002 se garantiza al usuario la posibilidad de dejar de recibir información comercial en un plazo máximo de un mes desde que comunique su voluntad mediante correo electrónico dirigido a <strong>info@cholorent.com</strong>.
+</p>
+</section>
 <footer>
 </footer>
 <script src="js/footer.js"></script>
