--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -58,7 +58,7 @@ CHOLORENT, S.L. y el usuario/a, con renuncia expresa a cualquier otro fuero que 
 En el supuesto de que el Usuario/a tenga su domicilio fuera de España, CHOLORENT, S.L. y el Usuario/a, con renuncia expresa a cualquier otro fuero que pudiera corresponderles, se someten a la Jurisdicción de los Juzgados y Tribunales de Santiago de Compostela.<br><br>
 
 <strong>3. BAJA DE COMUNICACIONES COMERCIALES</strong><br><br>
-De conformidad con la Ley de Servicios de la Sociedad de la Información 34/2002 se garantiza al usuario la posibilidad de dejar de recibir información comercial en un plazo máximo de un mes desde que comunique su voluntad mediante correo electrónico dirigido a <strong>info@cholorent.com</strong>.
+De conformidad con la Ley de Servicios de la Sociedad de la Información 34/2002 se garantiza al usuario la posibilidad de dejar de recibir información comercial en un plazo máximo de un mes desde que comunique su voluntad mediante correo electrónico dirigido a <strong>cholorent@cholorent.com</strong>.
 </p>
 </section>
 <footer>
