--- a/privacidad.html
+++ b/privacidad.html
@@ -3,7 +3,93 @@
 <title>Política de Privacidad | CholoRent S.L</title><link rel='stylesheet' href='css/styles.css'><link rel="icon" type="image/png" href="images/favicon.png">
 </head><body>
 <script src="js/navbar.js"></script>
-<section class='section'><h2>Política de Privacidad</h2><p>Aquí podrás incluir los detalles sobre cómo gestionas los datos personales de los usuarios conforme al RGPD.</p><p><a href='index.html'>← Volver al inicio</a></p></section>
+<section class='section'><h2>Política de Privacidad</h2><p>
+<strong>POLÍTICA DE PRIVACIDAD</strong><br><br>
+
+Desde <strong>CHOLORENT, S.L.</strong> entendemos que es esencial mantener una relación transparente contigo, por ello, a continuación, te presentamos nuestra Política de Privacidad, para que en todo momento estés debidamente informado acerca de cómo recopilamos y tratamos de forma segura cualquier dato que nos facilites.<br><br>
+
+Tus datos serán tratados de conformidad con la legislación vigente y, en concreto, de acuerdo a lo establecido en el Reglamento (UE) 2016/679 de 27 de abril de 2016 (RGPD) relativo a la protección de las personas físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos. También en lo referente a la Ley Orgánica 3/2018, del 5 de diciembre, de Protección de Datos Personales y Garantía de los Derechos Digitales.<br><br>
+
+Una lectura detenida de nuestra Política de Privacidad te aportará la información necesaria para conocer qué destino le daremos a los datos que nos proporciones.<br><br>
+
+<strong>1. ¿QUIÉN ES EL RESPONSABLE DEL TRATAMIENTO DE TUS DATOS?</strong><br>
+Si tú, o una persona autorizada, nos has facilitado tus datos, te informamos de que <strong>CHOLORENT, S.L.</strong>, con CIF: <strong>B70557236</strong> es el responsable del tratamiento de los mismos. Estos datos serán tratados de conformidad con lo dispuesto en las normativas vigentes sobre protección de datos personales.<br><br>
+
+Es posible que existan otros responsables en los tratamientos que realizamos, en ese caso siempre informaremos de quién es el/la responsable del tratamiento de los mismos, así como de sus datos de identificación.<br><br>
+
+Desde <strong>CHOLORENT, S.L.</strong> nos comprometemos al cumplimiento de la obligación de secreto de los datos de carácter personal y de su deber de guardarlos. Para ello adoptamos las medidas necesarias para evitar su alteración, pérdida, tratamiento o acceso no autorizado de acuerdo con lo establecido en el Reglamento.<br><br>
+
+<strong>2. ¿DÓNDE INFORMAMOS?</strong><br>
+Desde <strong>CHOLORENT, S.L.</strong> informamos a través de la página web <strong>www.cholorent.com</strong> en el apartado correspondiente a la política de privacidad. Más información en “Aviso Legal”.<br><br>
+
+<strong>3. ¿QUÉ DATOS PERSONALES TRATAMOS?</strong><br>
+Los datos personales que tratamos son:<br>
+- Aquellos que tú decidas facilitarnos voluntariamente.<br>
+- Los datos derivados de las comunicaciones que mantengas con nosotros.<br>
+- La información correspondiente a tu propia navegación en el caso de Servicios Online (dirección IP o información derivada de cookies o dispositivos similares).<br>
+- Aquella información que se encuentre disponible en fuentes accesibles al público, a la que legítimamente podamos acceder.<br>
+- Los datos que se deriven de la relación contractual o precontractual que mantengas con nosotros, incluida tu imagen, informándote siempre en este caso de la posibilidad de captar tu imagen.<br>
+- Los que terceras personas nos proporcionen sobre ti, existiendo una base legítima para ello o habiendo obtenido tu consentimiento para ello.<br>
+- Los datos de terceros que tú nos facilites, previo consentimiento del tercero en cuestión.<br><br>
+
+<strong>4. ¿CÓMO TRATAMOS LOS DATOS?</strong><br>
+En <strong>CHOLORENT, S.L.</strong> tratamos tus datos personales siempre en estricto cumplimiento de la legislación vigente. Además, te informamos de que contamos con las medidas técnicas y organizativas adecuadas para garantizar un nivel óptimo de seguridad, garantizando con ello que solo accederán aquellas personas que tengan autorización, que los mantendremos íntegros, evitando cualquier pérdida intencionada o accidental y que hemos reforzado los sistemas y servicios de tratamiento de datos.<br><br>
+
+Las operaciones, gestiones y procedimientos técnicos que realizamos de forma automatizada o no automatizada y que posibiliten la recogida, almacenamiento, modificación, transferencia y otras acciones sobre datos de carácter personal, tienen la consideración de tratamiento de datos personales.<br><br>
+
+<strong>5. ¿CUÁL ES LA LEGITIMACIÓN DEL TRATAMIENTO?</strong><br>
+La base de la legitimación del tratamiento de Datos Personales será la que resulte de la relación contractual o precontractual, de la relación laboral o de cualquier otra que se requiera para el tratamiento de datos, tales como el consentimiento expreso.<br><br>
+
+<strong>6. ¿CÓMO GESTIONAMOS LAS COMUNICACIONES ELECTRÓNICAS?</strong><br>
+De conformidad con lo establecido en la Ley 34/2002 de 11 de julio, de Servicios de la Sociedad de la Información y del Comercio Electrónico, y la Directiva 2002/58/CE te informamos de que puedes recibir comunicaciones e información de índole comercial mediante este sistema de comunicación electrónica (correos electrónicos, mensajes de respuesta automatizada de formularios y otros sistemas de comunicación) cuando nos hubieras otorgado tu consentimiento o bien se trate de comunicaciones comerciales referentes a productos o servicios similares a los prestados con anterioridad por el responsable del tratamiento de tus datos.<br><br>
+
+En el supuesto de que no desees recibir comunicaciones e informaciones de esta índole, nos lo puedes notificar por esta misma vía indicando en el asunto "BAJA COMUNICACIONES COMERCIALES" para que tus datos personales sean dados de baja de nuestra base de datos. Tu solicitud será accionada en un plazo de 1 mes desde su envío.<br><br>
+
+En el caso de recibir dichas comunicaciones por estos medios te informamos que los mensajes se dirigen exclusivamente a su destinatario y pueden contener información privilegiada o confidencial. Si no eres el destinatario indicado, te notificamos de que la utilización, divulgación y/o copia sin autorización está prohibida en virtud de la legislación vigente.<br><br>
+
+<strong>7. ¿CUÁNTO TIEMPO CONSERVAMOS TUS DATOS?</strong><br>
+Los datos personales relativos a personas físicas que desde <strong>CHOLORENT, S.L.</strong> recopilamos por cualquier medio, se conservarán mientras el interesado no solicite su supresión. Asimismo, se conservarán mientras se mantenga la relación que originó el tratamiento de los datos, respetando en cualquier caso los plazos legales de conservación. Concluido este período, los datos personales serán eliminados de todos los sistemas de <strong>CHOLORENT, S.L.</strong>.<br><br>
+
+<strong>8. ¿TUS DATOS SERÁN COMUNICADOS A TERCEROS?</strong><br>
+No habrá cesión, transmisión o transferencia de datos personales, salvo las ya informadas, que no sean a consecuencia de una obligación legal. Si por requerimiento de la Administración Pública o de las Instituciones Autonómicas en el ámbito de las funciones que la ley les atribuya expresamente, se nos solicitan tus datos, estos serán transmitidos.<br><br>
+
+De existir una cesión, transmisión o transferencia de datos personales fuera de los casos anteriormente previstos, serás previamente informado para que, si procede, nos prestes tu consentimiento.<br><br>
+
+Pero para poder organizarnos correctamente, tener buenas operativas y procedimientos que garanticen una buena gestión, desde <strong>CHOLORENT, S.L.</strong> puede ser necesario el tener que contratar los servicios de asesores, profesionales u otras empresas de servicios para tratar datos bajo nuestras indicaciones.<br><br>
+
+Este tratamiento por cuenta de terceros está regulado en un contrato que consta por escrito o de alguna otra forma legalmente admitida y que permita acreditar su celebración y contenido, especificando expresamente que el encargado del tratamiento tratará los datos conforme a nuestras instrucciones y no los aplicará o usará con un fin distinto al que figure en dicho contrato, ni los comunicará, ni siquiera para su conservación, a otras personas.<br><br>
+
+<strong>9. ¿CUÁLES SON TUS DERECHOS?</strong><br>
+La normativa de protección de datos le confiere los siguientes derechos:<br>
+- Derecho a revocar cualquier consentimiento prestado previamente.<br>
+- Derecho de acceso: Conocer qué tipo de datos se están tratando y las características del tratamiento que se lleva a cabo.<br>
+- Derecho de rectificación: Poder solicitar la modificación de los datos que sean inexactos o no veraces.<br>
+- Derecho de portabilidad: Poder obtener una copia en formato interoperable de los datos que estén siendo tratados.<br>
+- Derecho a la limitación del tratamiento en los casos que considere que no es necesario.<br>
+- Derecho de cancelación: Solicitar el cese del tratamiento de los datos y su supresión cuando ya no sea necesaria su conservación.<br><br>
+
+Si deseas más información respecto al tratamiento de tus datos, rectificar aquellos que sean inexactos, oponerte y/o limitar algún tratamiento que consideres que no es necesario, o solicitar la cancelación del tratamiento cuando los datos ya no sean necesarios, puedes dirigirte por escrito a <strong>CHOLORENT, S.L.</strong> en Parque Empresarial A Sionlla - Rúa Comunidade Valenciana Nº 4, 15707 - Santiago de Compostela (A Coruña) o mediante correo electrónico a <strong>info@cholorent.com</strong>.<br><br>
+
+Dicha comunicación deberá reflejar la siguiente información: Nombre y apellidos del usuario, la petición de solicitud, el domicilio y los datos acreditativos. El ejercicio de derechos deberá ser realizado por el propio usuario. No obstante, podrán ser ejecutados por una persona autorizada como representante legal del autorizado. En tal caso, se deberá aportar la documentación que acredite esta representación del interesado.<br><br>
+
+Asimismo, queremos informarte de que puedes retirar el consentimiento prestado sin que ello afecte a la licitud del tratamiento ya realizado, enviando tu solicitud a la misma dirección indicada en el párrafo anterior. En este caso, deberás acompañar a tu solicitud copia de tu DNI o documento acreditativo de tu identidad.<br><br>
+
+Recordarte, además, que tienes derecho a presentar una reclamación ante la Agencia Española de Protección de Datos (AEPD), si consideras infringidos tus derechos. Protección de datos: C/ Jorge Juan, 6 28001-Madrid - FAX: 914483680 - TELF: 901 100 099 - E-mail: ciudadano@agpd.es<br><br>
+
+<strong>10. FINALIDAD Y BASES CON QUE SE USAN LOS DATOS</strong><br>
+En <strong>CHOLORENT, S.L.</strong> tratamos los datos personales con las siguientes finalidades:<br>
+- Gestionar la relación contractual o precontractual con clientes, proveedores y empleados.<br>
+- Atender consultas, solicitudes de información o presupuestos realizadas a través de nuestros canales de contacto.<br>
+- Enviar comunicaciones comerciales y promocionales relacionadas con nuestros productos y servicios, siempre que exista consentimiento previo o una relación contractual previa que lo permita.<br>
+- Cumplir con las obligaciones legales y fiscales derivadas de nuestras actividades empresariales.<br><br>
+
+Las bases legales que legitiman estos tratamientos son:<br>
+- La ejecución de un contrato o la aplicación de medidas precontractuales a petición del interesado.<br>
+- El cumplimiento de obligaciones legales aplicables a <strong>CHOLORENT, S.L.</strong>.<br>
+- El consentimiento expreso del interesado para el envío de información comercial o el tratamiento de determinados datos personales.<br>
+- El interés legítimo de <strong>CHOLORENT, S.L.</strong> en garantizar la seguridad de sus instalaciones, sistemas y operaciones comerciales.<br><br>
+</p>
+</section>
 <footer>
 </footer>
 <script src="js/footer.js"></script>
