--- a/cookies.html
+++ b/cookies.html
@@ -3,7 +3,83 @@
 <title>Política de Cookies | CholoRent S.L</title><link rel='stylesheet' href='css/styles.css'><link rel="icon" type="image/png" href="images/favicon.png">
 </head><body>
 <script src="js/navbar.js"></script>
-<section class='section'><h2>Política de Cookies</h2><p>Esta página explica el uso de cookies en este sitio web y cómo gestionarlas.</p><p><a href='index.html'>← Volver al inicio</a></p></section>
+<section class='section'><h2>Política de Cookies</h2><p>
+<strong>POLÍTICA DE COOKIES</strong><br><br>
+
+El Sitio Web utiliza cookies cuando un/a USUARIO/A navega por los sitios y páginas web del Sitio Web.<br><br>
+
+El/la USUARIO/A tiene la posibilidad de configurar su navegador para ser avisado en pantalla de la recepción de cookies y para impedir su instalación en su disco duro.<br><br>
+
+Por favor, consulte las instrucciones y manuales de su navegador para ampliar esta información. Para utilizar el SITIO WEB no resulta necesario que el/la USUARIO/A permita la instalación de las cookies enviadas por el sitio web, sin perjuicio de que en tal caso será necesario que el/la USUARIO/A se registre como usuario/a de cada uno de los servicios cuya prestación requiera el previo registro.<br><br>
+
+La utilización de cookies y otras tecnologías de seguimiento se encuentra estandarizada en todos los sitios web y aplicaciones mediante las cuales se recopila información sobre las actividades en línea de los usuarios a través de aplicaciones, sitios web, redes sociales u otros servicios.<br><br>
+
+A continuación, le proporcionamos más información sobre cómo utilizamos las cookies y tecnologías similares y sobre cómo puede controlar y administrar las cookies.<br><br>
+
+<strong>1. ¿Qué es una cookie?</strong><br>
+Una cookie es un fichero que se descarga en su ordenador al acceder a determinadas páginas web. Las cookies permiten a una página web, entre otras cosas, almacenar y recuperar información sobre los hábitos de navegación de un usuario o de su equipo y, dependiendo de la información que contengan y del uso que se haga de su equipo, pueden utilizarse para reconocer al usuario.<br><br>
+
+El navegador del usuario memoriza cookies en el disco duro solamente durante la sesión actual, ocupando un espacio de memoria mínimo y no perjudicando al ordenador. Las cookies no contienen ninguna clase de información personal específica, y la mayoría se borran del disco duro al finalizar la sesión de navegador (las denominadas cookies de sesión).<br><br>
+
+La mayoría de los navegadores aceptan cookies como estándar y, con independencia de las mismas, permiten o impiden en los ajustes de seguridad las cookies temporales o memorizadas.<br><br>
+
+<strong>2. ¿Por qué este Sitio Web utiliza cookies?</strong><br>
+En <strong>CHOLORENT, S.L.</strong> utilizamos cookies con el objetivo de mejorar tu experiencia como usuario. Son una parte importante de cómo funciona nuestro Sitio Web. Entre otras finalidades, pueden ser utilizadas para recordar el idioma que usas durante la navegación y en futuras visitas.<br><br>
+
+<strong>3. ¿Qué información almacena una cookie?</strong><br>
+Las cookies utilizadas por este Sitio Web se asocian únicamente con un/a USUARIO/A anónimo/a y su ordenador, y no proporcionan por sí solas el nombre y apellidos del/la USUARIO/A.<br><br>
+
+Gracias a las cookies, es posible reconocer a los/las USUARIOS/AS registrados/as después de que éstos/as se hayan registrado por primera vez, sin que tengan que hacerlo en cada visita para acceder a las áreas y servicios reservados exclusivamente a ellos/as. Las cookies utilizadas no pueden leer datos de su disco duro ni leer los archivos cookie creados por otros proveedores. Los datos identificativos del/de la USUARIO/A son cifrados para mayor seguridad.<br><br>
+
+Nuestros servidores web detectan automáticamente la dirección IP y el nombre de dominio utilizados por el/la usuario/a. Toda esta información es registrada en un fichero de actividad del servidor que permite el posterior procesamiento de los datos con el fin de obtener mediciones estadísticas que nos permitan conocer el número de impresiones de páginas, el número de visitas realizadas, etc.<br><br>
+
+<strong>4. ¿Qué tipos de cookies existen?</strong><br>
+- <strong>Cookies técnicas:</strong> Permiten al usuario la navegación a través de la página web y la utilización de las diferentes opciones o servicios que en ella existen (por ejemplo: controlar el tráfico, identificar la sesión, acceder a zonas restringidas, recordar elementos de un pedido, usar elementos de seguridad durante la navegación, almacenar contenidos para la difusión de vídeos o sonido).<br>
+- <strong>Cookies analíticas:</strong> Permiten realizar el seguimiento y análisis del comportamiento de los usuarios en los sitios web. La información recogida se utiliza en la medición de la actividad del sitio web y para la elaboración de perfiles de navegación con el fin de introducir mejoras.<br>
+- <strong>Cookies de personalización:</strong> Permiten al usuario acceder al servicio con características predefinidas (idioma, tipo de navegador, diseño, geolocalización, configuración regional, etc.).<br>
+- <strong>Cookies sociales:</strong> Necesarias para enlazar el sitio web con las redes sociales del usuario.<br>
+- <strong>Cookies de publicidad y preferencias:</strong> Permiten la gestión eficaz de los espacios publicitarios, adecuando el contenido para que sea relevante y evitando mostrar anuncios repetidos.<br>
+- <strong>Cookies de afiliados:</strong> Permiten conocer el origen de las visitas al sitio web.<br>
+- <strong>Cookies de terceros:</strong> En algunas páginas pueden instalarse cookies de terceros (por ejemplo, Google Analytics, Comscore, etc.) para mejorar los servicios ofrecidos.<br><br>
+
+En función de su durabilidad:<br>
+- <strong>Cookies de sesión:</strong> Expiran al cerrar el navegador.<br>
+- <strong>Cookies permanentes:</strong> Su vigencia puede ser variable, permanecen hasta cumplir su objetivo o hasta que el usuario las elimine manualmente.<br><br>
+
+<strong>5. ¿Cómo puede permitir, rechazar o bloquear las cookies?</strong><br>
+El usuario podrá, en cualquier momento, elegir qué cookies quiere que funcionen en este sitio web mediante la configuración de su navegador. Para más información, busque “gestionar cookies” en su navegador.<br><br>
+
+Ejemplos de configuración:<br>
+- Internet Explorer 10 / 11<br>
+- Safari<br>
+- Google Chrome<br>
+- Mozilla Firefox<br>
+- Opera<br>
+- Android<br>
+- Windows Phone<br>
+- BlackBerry<br><br>
+
+Existen herramientas de terceros disponibles online que permiten detectar las cookies en cada sitio web visitado y gestionar su desactivación.<br><br>
+
+Según la Directiva de la UE, las cookies que requieren el consentimiento informado y expreso del usuario son las cookies analíticas, de publicidad y de afiliación.<br><br>
+
+Quedan exceptuadas aquellas cookies de carácter técnico y necesarias para el funcionamiento del sitio web o la prestación de servicios expresamente solicitados por el usuario.<br><br>
+
+<strong>6. Actualizaciones y cambios en la Política de Cookies</strong><br>
+El responsable, <strong>CHOLORENT, S.L.</strong> con CIF <strong>B70557236</strong>, podrá modificar esta Política de Cookies en función de cambios en el uso de cookies en su sitio web, nuevas exigencias legislativas o reglamentarias, o con la finalidad de adaptarla a las instrucciones de las autoridades de control, en concreto, la Agencia Española de Protección de Datos.<br><br>
+
+Los posibles cambios significativos serán publicados en esta misma Política. No obstante, será responsabilidad del usuario acceder periódicamente a esta página para conocer cualquier modificación, sin perjuicio de que podamos comunicar los cambios mediante un aviso informativo en nuestro sitio web y/o a través de otros medios.<br><br>
+
+<strong>7. ¿Qué cookies se utilizan en este sitio web?</strong><br>
+Se utilizan cookies técnicas necesarias o convenientes para la prestación de determinados servicios. Si se desactivan estas cookies, no podrá recibir correctamente los contenidos del sitio web.<br><br>
+
+<strong>CHOLORENT, S.L.</strong><br>
+Parque Empresarial A Sionlla – Rúa Comunidade Valenciana Nº 4, 15707 – Santiago de Compostela (A Coruña)<br>
+CIF: <strong>B70557236</strong><br>
+Correo electrónico: <strong>cholorent@cholorent.com</strong><br>
+Sitio web: <strong>www.cholorent.com</strong><br><br>
+</p>
+</section>
 <footer>
 </footer>
 <script src="js/footer.js"></script>
